--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,5 @@ config/database.yml
 public/uploads
 
 # Ignore application configuration
-/config/application.yml
+config/application.yml
+config/secrets.yml
